<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2011 United States Government as represented by the Administrator of the
    National Aeronautics and Space Administration.
    All Rights Reserved.
-->


<!-- $Id: main.xml 83 2011-10-06 15:37:57Z ccrick $ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <gov.nasa.worldwind.WorldWindowGLSurfaceView
            android:id="@+id/wwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

   <LinearLayout
        android:id="@+id/latlondisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/transparent_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:id="@+id/latlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/latvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offglobe" />

        <TextView
            android:id="@+id/spacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/spacer" />

        <TextView
            android:id="@+id/lonlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/lonvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offglobe" />
    </LinearLayout>
</LinearLayout>